--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 main: aliuly\manyworlds\Main
-api: 3.0.0-ALPHA9
+api: [3.0.0]
 load: POSTWORLD
 
 name: ManyWorlds
 description: Manage Multiple Worlds
-version: 2.1.0
+version: 2.2.0
 author: aliuly
 
 commands:
